--- a/KonkursyMuzyczne/App.config
+++ b/KonkursyMuzyczne/App.config
@@ -8,7 +8,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="KonkursyMuzyczne" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MAGDY\SQLEXPRESS;initial catalog=KonkursyMuzyczne;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KonkursyMuzyczne" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MAGDY\SQLEXPRESS;initial catalog=KonkursyMuzyczne;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="KonkursyMuzyczne.Properties.Settings.KonkursyMuzyczneConnectionString"
+      connectionString="Data Source=LAPTOP-MAGDY\SQLEXPRESS;Initial Catalog=KonkursyMuzyczne;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
