--- a/KonkursyMuzyczne/App.config
+++ b/KonkursyMuzyczne/App.config
@@ -10,9 +10,9 @@
   <connectionStrings>
     <add name="KonkursyMuzyczne" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MAGDY\SQLEXPRESS;initial catalog=KonkursyMuzyczne;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="KonkursyMuzyczne.Properties.Settings.KonkursyMuzyczneConnectionString"
-      connectionString="Data Source=LAPTOP-MAGDY\SQLEXPRESS;Initial Catalog=KonkursyMuzyczne;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="KonkursyMuzyczne.Properties.Settings.BazaConnectionString"
+      connectionString="Provider=SQLNCLI11;Data Source=LAPTOP-MAGDY\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=BazaKonkursy;Initial File Name=&quot;D:\Dokumenty\Rok III\Semestr V\Programowanie w technologii ADO.NET\Program\KonkursyMuzyczne\Konkursy-Muzyczne\KonkursyMuzyczne\KonkursyMuzyczne.mdf&quot;"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
