--- a/KonkursyMuzyczne/KonkursyMuzyczne.csproj
+++ b/KonkursyMuzyczne/KonkursyMuzyczne.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +46,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Ikona.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -55,44 +73,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="EdycjeKonkursu.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="KonkursyMuzyczneDataSet.Designer.cs">
+    <Compile Include="BazaKonkursyDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>KonkursyMuzyczneDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Uczestniczący.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Uczestniczący.Designer.cs">
-      <DependentUpon>Uczestniczący.cs</DependentUpon>
+      <DependentUpon>BazaKonkursyDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Konkursy.cs">
+      <DependentUpon>konkursy.xsd</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Konkursy.Designer.cs">
       <DependentUpon>Konkursy.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Konkurs.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="StronaGłówna.cs">
       <SubType>Form</SubType>
@@ -102,16 +93,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Uczestnicy.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Uczestnicy.Designer.cs">
-      <DependentUpon>Uczestnicy.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UczestnicyEdycji.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Konkursy.resx">
       <DependentUpon>Konkursy.cs</DependentUpon>
     </EmbeddedResource>
@@ -128,23 +109,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EntityDeploy Include="Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="KonkursyMuzyczneDataSet.xsc">
-      <DependentUpon>KonkursyMuzyczneDataSet.xsd</DependentUpon>
+    <None Include="BazaKonkursyDataSet.xsc">
+      <DependentUpon>BazaKonkursyDataSet.xsd</DependentUpon>
     </None>
-    <None Include="KonkursyMuzyczneDataSet.xsd">
+    <None Include="BazaKonkursyDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>KonkursyMuzyczneDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>BazaKonkursyDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="KonkursyMuzyczneDataSet.xss">
-      <DependentUpon>KonkursyMuzyczneDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
+    <None Include="BazaKonkursyDataSet.xss">
+      <DependentUpon>BazaKonkursyDataSet.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -161,20 +135,40 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
-    <Content Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-    </Content>
     <None Include="Resources\piano-1655558_1920.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 i x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Ikona.ico" />
+    <None Include="Resources\uczestnicyedycji1.png" />
+    <None Include="Resources\edycje1.png" />
+    <None Include="Resources\konkursy2.png" />
+    <None Include="Resources\konkursy1.png" />
+    <None Include="Resources\edycje.png" />
+    <None Include="Resources\uczestnicyedycji.png" />
+    <None Include="Resources\konkursy.png" />
+    <None Include="Resources\uczestnicy1.png" />
+    <None Include="Resources\uczestnicy.png" />
+    <None Include="Resources\uczestnik.png" />
+    <None Include="Resources\silhouette-3316257_1280.png" />
+    <None Include="Resources\piano-1655558_19201.jpg" />
+    <None Include="Resources\sheet-music-1229481_1920.jpg" />
+    <None Include="Resources\vintage-1113175_1280.jpg" />
+    <None Include="Resources\no-person-3221109_1920.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
