--- a/KonkursyMuzyczne/App.config
+++ b/KonkursyMuzyczne/App.config
@@ -8,8 +8,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
+    <add name="KonkursyMuzyczne" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MAGDY\SQLEXPRESS;initial catalog=KonkursyMuzyczne;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
     <add name="KonkursyMuzyczne.Properties.Settings.BazaKonkursowConnectionString"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bin\Debug\BazaKonkursow.mdf;Integrated Security=True;Connect Timeout=30"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BazaKonkursow.mdf;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
